force-app/main/default/objects/PPR_PurchProduct__c/PPR_PurchProduct__c.object-meta.xml
<CustomObject>
    <description>Purchased product by customers</description>
    <label>Purchased Product</label>
    <nameField>
        <label>Designation</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Purchased Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>