force-app/main/default/objects/PPR_PurchProduct__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>Price</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>