force-app/main/default/objects/PPR_PurchProduct__c/fields/CAName__c.field-meta.xml
<CustomField>
    <fullName>CAName__c</fullName>
    <label>CAName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>