force-app/main/default/objects/PPR_PurchProduct__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <description>Client who buyed the product</description>
    <inlineHelpText>Select the client who buyed this product.</inlineHelpText>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Purchased Products</relationshipLabel>
    <relationshipName>Purchased_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>