force-app/main/default/objects/PPR_PurchProduct__c/fields/Collection__c.field-meta.xml
<CustomField>
    <fullName>Collection__c</fullName>
    <label>Collection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>