force-app/main/default/objects/PPR_PurchProduct__c/fields/Contact_Channel__c.field-meta.xml
<CustomField>
    <fullName>Contact_Channel__c</fullName>
    <description>This field was created for customer service for reporting purposes and populated by a batch</description>
    <label>Contact Channel</label>
    <length>40</length>
    <type>Text</type>
</CustomField>