force-app/main/default/objects/PPR_PurchProduct__c/fields/ConvertedAmountEUR__c.field-meta.xml
<CustomField>
    <fullName>ConvertedAmountEUR__c</fullName>
    <label>Converted Amount (EUR)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>