force-app/main/default/objects/PPR_PurchProduct__c/fields/ConvertedAmountUSD__c.field-meta.xml
<CustomField>
    <fullName>ConvertedAmountUSD__c</fullName>
    <label>Converted Amount (USD)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>