force-app/main/default/objects/PPR_PurchProduct__c/fields/ConvertedAmountYEN__c.field-meta.xml
<CustomField>
    <fullName>ConvertedAmountYEN__c</fullName>
    <label>Converted Amount (YEN)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>