force-app/main/default/objects/PPR_PurchProduct__c/fields/ConvertedAmountYUAN__c.field-meta.xml
<CustomField>
    <fullName>ConvertedAmountYUAN__c</fullName>
    <label>Converted Amount (YUAN)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>