force-app/main/default/objects/PPR_PurchProduct__c/fields/DCS_Voice_notif__c.field-meta.xml
<CustomField>
    <fullName>DCS_Voice_notif__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DCS Voice notif</label>
    <type>Checkbox</type>
</CustomField>