force-app/main/default/objects/PPR_PurchProduct__c/fields/DesignationRepaired__c.field-meta.xml
<CustomField>
    <fullName>DesignationRepaired__c</fullName>
    <label>Repaired Product Designation</label>
    <length>120</length>
    <type>Text</type>
</CustomField>