force-app/main/default/objects/PPR_PurchProduct__c/fields/DREAMID__c.field-meta.xml
<CustomField>
    <fullName>DREAMID__c</fullName>
    <description>DREAM Id Transaction</description>
    <externalId>true</externalId>
    <label>DREAM Id Transaction</label>
    <length>29</length>
    <type>Text</type>
</CustomField>