force-app/main/default/objects/PPR_PurchProduct__c/fields/DREAMIdClient__c.field-meta.xml
<CustomField>
    <fullName>DREAMIdClient__c</fullName>
    <externalId>true</externalId>
    <label>DREAM Id Client</label>
    <length>18</length>
    <type>Text</type>
</CustomField>