force-app/main/default/objects/PPR_PurchProduct__c/fields/DreamIdSA__c.field-meta.xml
<CustomField>
    <fullName>DreamIdSA__c</fullName>
    <description>Give the code of the selected CA.</description>
    <externalId>true</externalId>
    <label>DreamIdCA</label>
    <length>18</length>
    <type>Text</type>
</CustomField>