force-app/main/default/objects/PPR_PurchProduct__c/fields/ExceptionalPurchaseCA__c.field-meta.xml
<CustomField>
    <fullName>ExceptionalPurchaseCA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag the highest amount line when Exceptional Purchase Flag is true</description>
    <label>Exceptional Purchase CA</label>
    <type>Checkbox</type>
</CustomField>