force-app/main/default/objects/PPR_PurchProduct__c/fields/ExceptionalPurchaseFlag__c.field-meta.xml
<CustomField>
    <fullName>ExceptionalPurchaseFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exceptional Purchase Flag</label>
    <type>Checkbox</type>
</CustomField>