force-app/main/default/objects/PPR_PurchProduct__c/fields/Function__c.field-meta.xml
<CustomField>
    <fullName>Function__c</fullName>
    <label>Function</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ProductLine__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>ACCESSOIRES BUSINESS</fullName>
            </value>
            <value>
                <fullName>ACCESSOIRES CHEVEUX</fullName>
            </value>
            <value>
                <fullName>ACCESSOIRES DE VOYAGE</fullName>
            </value>
            <value>
                <fullName>ACCESSOIRES FUMEURS</fullName>
            </value>
            <value>
                <fullName>ACCESSOIRES OPTIONNELS</fullName>
            </value>
            <value>
                <fullName>ACCESSOIRES STYLOS</fullName>
            </value>
            <value>
                <fullName>ACCESSORY BAGS</fullName>
            </value>
            <value>
                <fullName>AGENDA PEN</fullName>
            </value>
            <value>
                <fullName>AGENDA PEN REFILLS</fullName>
            </value>
            <value>
                <fullName>ASIA BOOKSHOP</fullName>
            </value>
            <value>
                <fullName>ASSEMBLED BELTS</fullName>
            </value>
            <value>
                <fullName>AUTRES ACC. FANTAISIE</fullName>
            </value>
            <value>
                <fullName>AUTRES BIJOUX</fullName>
            </value>
            <value>
                <fullName>AUTRES CRAVATES</fullName>
            </value>
            <value>
                <fullName>BAGAGES RIGIDES</fullName>
            </value>
            <value>
                <fullName>BAGAGES ROULANTS</fullName>
            </value>
            <value>
                <fullName>BAGAGES SOUPLES OU SEMI STRUCT</fullName>
            </value>
            <value>
                <fullName>BAG CHARMS</fullName>
            </value>
            <value>
                <fullName>BAGS</fullName>
            </value>
            <value>
                <fullName>BAGS OPTIONS</fullName>
            </value>
            <value>
                <fullName>BAGUES</fullName>
            </value>
            <value>
                <fullName>BAGUES PRECIEUSES</fullName>
            </value>
            <value>
                <fullName>BALL PEN</fullName>
            </value>
            <value>
                <fullName>BALLPOINT</fullName>
            </value>
            <value>
                <fullName>BANDANAS</fullName>
            </value>
            <value>
                <fullName>BANDEAU</fullName>
            </value>
            <value>
                <fullName>BARRETTES PRECIEUSES</fullName>
            </value>
            <value>
                <fullName>BEACH</fullName>
            </value>
            <value>
                <fullName>BLANKETS</fullName>
            </value>
            <value>
                <fullName>BOOKS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>