force-app/main/default/objects/PPR_PurchProduct__c/fields/ICX_ContactChannel__c.field-meta.xml
<CustomField>
    <fullName>ICX_ContactChannel__c</fullName>
    <description>This field was created for customer service for reporting purposes and populated by a batch</description>
    <label>Contact Channel Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Chat</fullName>
            </value>
            <value>
                <fullName>Case</fullName>
            </value>
            <value>
                <fullName>Product On Demand</fullName>
            </value>
            <value>
                <fullName>Messaging</fullName>
            </value>
            <value>
                <fullName>Social</fullName>
                <isActive>false</isActive>
                <label>Social</label>
            </value>
            <value>
                <fullName>Web&amp;Email</fullName>
                <isActive>false</isActive>
                <label>Web&amp;Email</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>