force-app/main/default/objects/PPR_PurchProduct__c/fields/ICX_ContactChannel_RecordId__c.field-meta.xml
<CustomField>
    <fullName>ICX_ContactChannel_RecordId__c</fullName>
    <description>This field was created for customer service for reporting purposes and populated by a batch</description>
    <label>Contact Channel Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>