force-app/main/default/objects/PPR_PurchProduct__c/fields/ICX_CSCContactDate__c.field-meta.xml
<CustomField>
    <fullName>ICX_CSCContactDate__c</fullName>
    <label>CSC Contact Date</label>
    <type>Date</type>
</CustomField>