force-app/main/default/objects/PPR_PurchProduct__c/fields/ICX_CSCUser__c.field-meta.xml
<CustomField>
    <fullName>ICX_CSCUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CSC User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Purchased_Products_Related</relationshipName>
    <type>Lookup</type>
</CustomField>