force-app/main/default/objects/PPR_PurchProduct__c/fields/ID18Characters__c.field-meta.xml
<CustomField>
    <fullName>ID18Characters__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ID 18 characters</label>
    <type>Text</type>
</CustomField>