force-app/main/default/objects/PPR_PurchProduct__c/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <formula>IMAGE( Image_Url__c , &quot;Photo unavailable&quot;, 200, 200)</formula>
    <label>Image</label>
    <type>Text</type>
</CustomField>