force-app/main/default/objects/PPR_PurchProduct__c/fields/Image_Url__c.field-meta.xml
<CustomField>
    <fullName>Image_Url__c</fullName>
    <formula>IF(ISPICKVAL(TransactionType__c, &apos;8&apos;),
	&apos;http://fr.louisvuitton.com/images/is/image/lv/1/PP_VP_L/louis%20vuitton--&apos; + RepairedSKU__c + &apos;_PM2_&apos; + &apos;Front%20view&apos; + &apos;.jpg&apos;,
	IF(ISPICKVAL(ProductLine__c, &apos;Shoes&apos;),
		&apos;http://fr.louisvuitton.com/images/is/image/lv/1/PP_VP_L/louis%20vuitton--&apos; + LEFT(SKU__c ,10 ) + &apos;_PM2_&apos; + &apos;Front%20view&apos; + &apos;.jpg&apos;, 
	    IF(ISPICKVAL(ProductLine__c , &apos;Ready To Wear&apos;),
	    	&apos;http://fr.louisvuitton.com/images/is/image/lv/1/PP_VP_L/louis%20vuitton--&apos; + LEFT(SKU__c ,12 )+ &apos;_PM2_&apos; + &apos;Front%20view&apos; + &apos;.jpg&apos;, 
	    	&apos;http://fr.louisvuitton.com/images/is/image/lv/1/PP_VP_L/louis%20vuitton--&apos; + SKU__c + &apos;_PM2_&apos; + &apos;Front%20view&apos; + &apos;.jpg&apos; 
		) 
	)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Image Url</label>
    <type>Text</type>
</CustomField>