force-app/main/default/objects/PPR_PurchProduct__c/fields/MacroFunction__c.field-meta.xml
<CustomField>
    <fullName>MacroFunction__c</fullName>
    <label>Macro Function</label>
    <length>255</length>
    <type>Text</type>
</CustomField>