force-app/main/default/objects/PPR_PurchProduct__c/fields/MacroMaterial__c.field-meta.xml
<CustomField>
    <fullName>MacroMaterial__c</fullName>
    <label>Material</label>
    <length>255</length>
    <type>Text</type>
</CustomField>