force-app/main/default/objects/PPR_PurchProduct__c/fields/OrderATGId__c.field-meta.xml
<CustomField>
    <fullName>OrderATGId__c</fullName>
    <externalId>true</externalId>
    <label>Order ATG ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>