force-app/main/default/objects/PPR_PurchProduct__c/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <description>Order created by which system</description>
    <formula>IF (
  /* Transaction id starting by 4 numbers (store code) =&gt; X-Store */
  AND (
    NOT(ISBLANK(TransactionRMSId__c)),
    ISNUMBER(LEFT(TransactionRMSId__c, 4))
  ),
  &apos;X-STORE&apos;,
  IF (
    /* Transaction id starting by 1 letter (store code) =&gt; RMS */
    AND (
      NOT(ISBLANK(TransactionRMSId__c)),
      NOT(ISNUMBER(LEFT(TransactionRMSId__c, 1)))
    ),
    &apos;RMS&apos;,
    /* Transaction id empty */
    &apos;&apos;
  )
)</formula>
    <label>Origin</label>
    <type>Text</type>
</CustomField>