force-app/main/default/objects/PPR_PurchProduct__c/fields/ProductGender__c.field-meta.xml
<CustomField>
    <fullName>ProductGender__c</fullName>
    <label>Product Gender</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MEN</fullName>
            </value>
            <value>
                <fullName>WOMEN</fullName>
            </value>
            <value>
                <fullName>UNISEX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>