force-app/main/default/objects/PPR_PurchProduct__c/fields/ProductLine__c.field-meta.xml
<CustomField>
    <fullName>ProductLine__c</fullName>
    <label>Product Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accessories</fullName>
            </value>
            <value>
                <fullName>Jewelry</fullName>
            </value>
            <value>
                <fullName>Leather Goods</fullName>
            </value>
            <value>
                <fullName>Perfume</fullName>
            </value>
            <value>
                <fullName>Ready To Wear</fullName>
            </value>
            <value>
                <fullName>Shoes</fullName>
            </value>
            <value>
                <fullName>Watches</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>