force-app/main/default/objects/PPR_PurchProduct__c/fields/ProductReference__c.field-meta.xml
<CustomField>
    <fullName>ProductReference__c</fullName>
    <label>Code court/référence du produit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>