force-app/main/default/objects/PPR_PurchProduct__c/fields/PurchaseCountry__c.field-meta.xml
<CustomField>
    <fullName>PurchaseCountry__c</fullName>
    <description>The country in which the product has been purchased.</description>
    <label>Purchase Country</label>
    <length>10</length>
    <type>Text</type>
</CustomField>