force-app/main/default/objects/PPR_PurchProduct__c/fields/PurchaseDateTime__c.field-meta.xml
<CustomField>
    <fullName>PurchaseDateTime__c</fullName>
    <description>Field used to link transaction to appointments</description>
    <label>Purchase Date Time</label>
    <type>DateTime</type>
</CustomField>