force-app/main/default/objects/PPR_PurchProduct__c/fields/PurchasedDate__c.field-meta.xml
<CustomField>
    <fullName>PurchasedDate__c</fullName>
    <label>Purchased Date</label>
    <type>Date</type>
</CustomField>