force-app/main/default/objects/PPR_PurchProduct__c/fields/RepairedSKU__c.field-meta.xml
<CustomField>
    <fullName>RepairedSKU__c</fullName>
    <label>Repaired SKU</label>
    <length>20</length>
    <type>Text</type>
</CustomField>