force-app/main/default/objects/PPR_PurchProduct__c/fields/RMSCAId__c.field-meta.xml
<CustomField>
    <fullName>RMSCAId__c</fullName>
    <label>RMS CA Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>