force-app/main/default/objects/PPR_PurchProduct__c/fields/RMSSKUCode__c.field-meta.xml
<CustomField>
    <fullName>RMSSKUCode__c</fullName>
    <label>Code RMS du produit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>