force-app/main/default/objects/PPR_PurchProduct__c/fields/SA__c.field-meta.xml
<CustomField>
    <fullName>SA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link with the SA who sold the product.</description>
    <label>CA</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Purchased_Products</relationshipName>
    <type>Lookup</type>
</CustomField>