force-app/main/default/objects/PPR_PurchProduct__c/fields/SA_Formula__c.field-meta.xml
<CustomField>
    <fullName>SA_Formula__c</fullName>
    <formula>IF(ISBLANK( SA__c ), SAName__c ,   SA__r.LastName &amp; &quot; &quot; &amp; SA__r.FirstName )</formula>
    <label>CA</label>
    <type>Text</type>
</CustomField>