force-app/main/default/objects/PPR_PurchProduct__c/fields/SAName__c.field-meta.xml
<CustomField>
    <fullName>SAName__c</fullName>
    <label>CA Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>