force-app/main/default/objects/PPR_PurchProduct__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <label>Store</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N83</fullName>
            </value>
            <value>
                <fullName>V24</fullName>
            </value>
            <value>
                <fullName>V06</fullName>
            </value>
            <value>
                <fullName>V88</fullName>
            </value>
            <value>
                <fullName>V14</fullName>
            </value>
            <value>
                <fullName>V85</fullName>
            </value>
            <value>
                <fullName>V15</fullName>
            </value>
            <value>
                <fullName>V18</fullName>
            </value>
            <value>
                <fullName>V76</fullName>
            </value>
            <value>
                <fullName>V35</fullName>
            </value>
            <value>
                <fullName>V25</fullName>
            </value>
            <value>
                <fullName>V61</fullName>
            </value>
            <value>
                <fullName>V38</fullName>
            </value>
            <value>
                <fullName>V42</fullName>
            </value>
            <value>
                <fullName>V62</fullName>
            </value>
            <value>
                <fullName>V86</fullName>
            </value>
            <value>
                <fullName>V50</fullName>
            </value>
            <value>
                <fullName>V33</fullName>
            </value>
            <value>
                <fullName>V57</fullName>
            </value>
            <value>
                <fullName>V74</fullName>
            </value>
            <value>
                <fullName>V36</fullName>
            </value>
            <value>
                <fullName>V82</fullName>
            </value>
            <value>
                <fullName>V80</fullName>
            </value>
            <value>
                <fullName>V21</fullName>
            </value>
            <value>
                <fullName>V65</fullName>
            </value>
            <value>
                <fullName>V72</fullName>
            </value>
            <value>
                <fullName>V54</fullName>
            </value>
            <value>
                <fullName>V31</fullName>
            </value>
            <value>
                <fullName>V32</fullName>
            </value>
            <value>
                <fullName>V13</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>