force-app/main/default/objects/PPR_PurchProduct__c/fields/StoreCountry__c.field-meta.xml
<CustomField>
    <fullName>StoreCountry__c</fullName>
    <label>Store Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>