force-app/main/default/objects/PPR_PurchProduct__c/fields/STOREORDER__c.field-meta.xml
<CustomField>
    <fullName>STOREORDER__c</fullName>
    <label>Store Order</label>
    <length>50</length>
    <type>Text</type>
</CustomField>