force-app/main/default/objects/PPR_PurchProduct__c/fields/StoreRetailCode__c.field-meta.xml
<CustomField>
    <fullName>StoreRetailCode__c</fullName>
    <label>Store Retail Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>