force-app/main/default/objects/PPR_PurchProduct__c/fields/SubFunction__c.field-meta.xml
<CustomField>
    <fullName>SubFunction__c</fullName>
    <label>SubFunction</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ProductLine__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>30-35 MM BELTS</fullName>
            </value>
            <value>
                <fullName>40 MM BELTS</fullName>
            </value>
            <value>
                <fullName>70 CM SQUARES</fullName>
            </value>
            <value>
                <fullName>90 CM SQUARES</fullName>
            </value>
            <value>
                <fullName>ACCESSOIRES DE VOYAGE RIGIDES</fullName>
            </value>
            <value>
                <fullName>ACCESSORY BAGS</fullName>
            </value>
            <value>
                <fullName>ACC FANTAISIE SAC CHARMS</fullName>
            </value>
            <value>
                <fullName>ACETATE SUNGLASSES</fullName>
            </value>
            <value>
                <fullName>ACRYLIC LACE</fullName>
            </value>
            <value>
                <fullName>ACRYLIQUE LACE</fullName>
            </value>
            <value>
                <fullName>AG BALLPOINT PEN REFILLS</fullName>
            </value>
            <value>
                <fullName>AGENDA BALLPOINT PEN</fullName>
            </value>
            <value>
                <fullName>AGENDA PENCIL</fullName>
            </value>
            <value>
                <fullName>AG PENCIL REFILLS</fullName>
            </value>
            <value>
                <fullName>ALARM CLOCK</fullName>
            </value>
            <value>
                <fullName>ANALOGIC &amp; DIGITAL</fullName>
            </value>
            <value>
                <fullName>ANNEAUX</fullName>
            </value>
            <value>
                <fullName>ARCHITECTURE</fullName>
            </value>
            <value>
                <fullName>ARCHITECTURE A.B.</fullName>
            </value>
            <value>
                <fullName>ARDILLON BUCKLE</fullName>
            </value>
            <value>
                <fullName>ART</fullName>
            </value>
            <value>
                <fullName>ART A.B.</fullName>
            </value>
            <value>
                <fullName>ART DU VOYAGE</fullName>
            </value>
            <value>
                <fullName>ART OF TRAVEL</fullName>
            </value>
            <value>
                <fullName>ARTS DECORATIFS</fullName>
            </value>
            <value>
                <fullName>ATTACHE CASE</fullName>
            </value>
            <value>
                <fullName>AUTRES</fullName>
            </value>
            <value>
                <fullName>AUTRES ACCESSOIRES CHEVEUX</fullName>
            </value>
            <value>
                <fullName>AUTRES ACCESSOIRES DE VOYAGE</fullName>
            </value>
            <value>
                <fullName>AUTRES ACCESSOIRES OPTIONNELS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>