force-app/main/default/objects/PPR_PurchProduct__c/fields/Subline__c.field-meta.xml
<CustomField>
    <fullName>Subline__c</fullName>
    <label>Subline</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ProductLine__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>AILLEURS</fullName>
            </value>
            <value>
                <fullName>ANTHEIA</fullName>
            </value>
            <value>
                <fullName>ANTIGUA</fullName>
            </value>
            <value>
                <fullName>ARCHIPEL SUMMER COLLECTION</fullName>
            </value>
            <value>
                <fullName>AUTRES CUIRS</fullName>
            </value>
            <value>
                <fullName>AUTRES CUIRS EXOTIQUES</fullName>
            </value>
            <value>
                <fullName>AUTRES CUIRS MONOGRAM</fullName>
            </value>
            <value>
                <fullName>AUTRES TOILES</fullName>
            </value>
            <value>
                <fullName>AUTRES TOILES MONOGRAM</fullName>
            </value>
            <value>
                <fullName>AUTRUCHE</fullName>
            </value>
            <value>
                <fullName>BELLAIX</fullName>
            </value>
            <value>
                <fullName>BEQUIA</fullName>
            </value>
            <value>
                <fullName>CHEVRE FRISSON</fullName>
            </value>
            <value>
                <fullName>CHICAGO</fullName>
            </value>
            <value>
                <fullName>CONSTELLATION</fullName>
            </value>
            <value>
                <fullName>COSMIC BLOSSOM</fullName>
            </value>
            <value>
                <fullName>CROCODILIEN BRILLANT</fullName>
            </value>
            <value>
                <fullName>CROCODILIEN MAT</fullName>
            </value>
            <value>
                <fullName>CUIR GRAFFITIS</fullName>
            </value>
            <value>
                <fullName>CUIR ORFEVRE</fullName>
            </value>
            <value>
                <fullName>CUIRS EXOTIQUES</fullName>
            </value>
            <value>
                <fullName>DAMIER</fullName>
            </value>
            <value>
                <fullName>DAMIER AVENTURE</fullName>
            </value>
            <value>
                <fullName>DAMIER AZUR</fullName>
            </value>
            <value>
                <fullName>DAMIER CHENE</fullName>
            </value>
            <value>
                <fullName>DAMIER EBENE</fullName>
            </value>
            <value>
                <fullName>DAMIER GEANT</fullName>
            </value>
            <value>
                <fullName>DAMIER GLACE</fullName>
            </value>
            <value>
                <fullName>DAMIER GRAPHITE</fullName>
            </value>
            <value>
                <fullName>DAMIER INFINI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>