force-app/main/default/objects/PPR_PurchProduct__c/fields/TECH_ConvertedAmount__c.field-meta.xml
<CustomField>
    <fullName>TECH_ConvertedAmount__c</fullName>
    <formula>CASE( $User.Currency__c ,
      &apos;EUR&apos;,  ConvertedAmountEUR__c ,
      &apos;USD&apos;,  ConvertedAmountUSD__c ,
      &apos;JPY&apos;,  ConvertedAmountYEN__c ,
      &apos;CNY&apos;,  ConvertedAmountYUAN__c ,
              ConvertedAmountUSD__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Converted Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>