force-app/main/default/objects/PPR_PurchProduct__c/fields/TECH_File__c.field-meta.xml
<CustomField>
    <fullName>TECH_File__c</fullName>
    <label>TECH_File</label>
    <length>75</length>
    <type>Text</type>
</CustomField>