force-app/main/default/objects/PPR_PurchProduct__c/fields/TECH_PurchasedDateFrom__c.field-meta.xml
<CustomField>
    <fullName>TECH_PurchasedDateFrom__c</fullName>
    <label>Purchased Date From</label>
    <type>Date</type>
</CustomField>