force-app/main/default/objects/PPR_PurchProduct__c/fields/TECH_PurchasedDateTo__c.field-meta.xml
<CustomField>
    <fullName>TECH_PurchasedDateTo__c</fullName>
    <label>Purchased Date To</label>
    <type>Date</type>
</CustomField>