force-app/main/default/objects/PPR_PurchProduct__c/fields/TECH_PushNotified__c.field-meta.xml
<CustomField>
    <fullName>TECH_PushNotified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TECH_PushNotified</label>
    <type>Checkbox</type>
</CustomField>