force-app/main/default/objects/PPR_PurchProduct__c/fields/TECH_TransactionIdConso__c.field-meta.xml
<CustomField>
    <fullName>TECH_TransactionIdConso__c</fullName>
    <description>For Conso to call the Document webservice, the transaction id must match to the transaction id from Conso. As TECH_TransactionId__c is maybe used by another call, this field is created.</description>
    <formula>IF (
  AND (
				OR (
    ISPICKVAL(TransactionStoreType__c, &apos;Web&apos;),
    ISPICKVAL(TransactionStoreType__c, &apos;CSC&apos;)
			 ),
    NOT(ISBLANK(OrderATGId__c))
  ),
  OrderATGId__c,
  TransactionRMSId__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_TransactionIdConso</label>
    <type>Text</type>
</CustomField>