force-app/main/default/objects/PPR_PurchProduct__c/fields/TechPurchProductKey__c.field-meta.xml
<CustomField>
    <fullName>TechPurchProductKey__c</fullName>
    <formula>TransactionRMSId__c + Client__c + StoreRetailCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TechPurchProductKey</label>
    <type>Text</type>
</CustomField>