force-app/main/default/objects/PPR_PurchProduct__c/fields/TechTransactionId__c.field-meta.xml
<CustomField>
    <fullName>TechTransactionId__c</fullName>
    <formula>if(
!ISBLANK( OrderATGId__c ), 
OrderATGId__c, 
TransactionRMSId__c 
)</formula>
    <label>Tech Transaction Id</label>
    <type>Text</type>
</CustomField>