force-app/main/default/objects/PPR_PurchProduct__c/fields/Thumbnail__c.field-meta.xml
<CustomField>
    <fullName>Thumbnail__c</fullName>
    <formula>IMAGE( Image_Url__c , &quot;Photo unavailable&quot;, 50, 50)</formula>
    <label>Image</label>
    <type>Text</type>
</CustomField>