force-app/main/default/objects/PPR_PurchProduct__c/fields/TicketNumber__c.field-meta.xml
<CustomField>
    <fullName>TicketNumber__c</fullName>
    <externalId>true</externalId>
    <label>Ticket Number</label>
    <length>26</length>
    <required>true</required>
    <type>Text</type>
</CustomField>