force-app/main/default/objects/PPR_PurchProduct__c/fields/TransactionCCFlag__c.field-meta.xml
<CustomField>
    <fullName>TransactionCCFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transaction Click &amp; Collect</label>
    <type>Checkbox</type>
</CustomField>