force-app/main/default/objects/PPR_PurchProduct__c/fields/TransactionEAFlag__c.field-meta.xml
<CustomField>
    <fullName>TransactionEAFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transaction Endless Aisles</label>
    <type>Checkbox</type>
</CustomField>